--- a/scss/_utility.scss
+++ b/scss/_utility.scss
@@ -33,6 +33,17 @@
 		margin-right: 0;
 	}
 
+	// Flex alignment
+	.sui-space-between {
+		justify-content: space-between;
+	}
+	.sui-align-start {
+		justify-content: flex-start;
+	}
+	.sui-align-end {
+		justify-content: flex-end;
+	}
+
 	.sui-success {
 		color: $success;
 	}
